--- a/scss/_bootstrap-extended/_variables.scss
+++ b/scss/_bootstrap-extended/_variables.scss
@@ -35,7 +35,7 @@ $grays: (
 // scss-docs-start color-variables
 $blue: #007bff !default;
 $indigo: #6610f2 !default;
-$purple: #7367f0 !default;
+$purple: #eea8a4 !default;
 $pink: #e83e8c !default;
 $red: #ff4c51 !default;
 $orange: #fd7e14 !default;
