--- a/scss/theme-default-dark.scss
+++ b/scss/theme-default-dark.scss
@@ -4,7 +4,7 @@
 @import './_theme/pages';
 @import './_theme/_theme';
 
-$primary-color: #7367f0;
+$primary-color: #eea8a4;
 
 body {
   background: $body-bg;
