--- a/scss/theme-semi-dark.scss
+++ b/scss/theme-semi-dark.scss
@@ -4,7 +4,7 @@
 @import './_theme/pages';
 @import './_theme/_theme';
 
-$primary-color: #eea8a4;
+$primary-color: #8e7b39;
 $body-bg: #f8f7fa;
 
 body {
